syntax = "proto3";

package plumbum.record;

import "spine/options.proto";

option (type_url_prefix) = "type.plumbum.edu";
option java_package = "edu.ddashenkov.plumbum.record";
option java_outer_classname = "RecordProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/core/user_id.proto";

message RecordId {
    int64 uid = 1 [(required) = true];
}

message Point {
    float x = 1;
    float y = 2;
}

message Record {

    RecordId id = 1 [(required) = true];

    spine.core.UserId user_id = 2;

    string display_name = 3;

    repeated Point points = 4;
}

message RecordList {

    spine.core.UserId user_id = 1 [(required) = true];

    repeated Record records = 2;
}
